wiki/ingress-wiki.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: my-release
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2022-12-23T16:02:58Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wiki
    app.kubernetes.io/version: latest
    helm.sh/chart: wiki-2.2.18
  name: my-release-wiki
  namespace: default
  resourceVersion: "21177"
  uid: 20687179-5150-4465-ab8e-e0ccf37cff7c
spec:
  rules:
  - host: wiki.armyost.com
    http:
      paths:
      - backend:
          service:
            name: my-release-wiki
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.122.16
