wiki/wiki_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/containerID: ca9b19f2774ad38d38ae84e19c5e1faf1412f6158770c670f1a1f9df3a73e76c
    cni.projectcalico.org/podIP: 10.233.75.17/32
    cni.projectcalico.org/podIPs: 10.233.75.17/32
  creationTimestamp: "2022-12-23T17:34:23Z"
  generateName: my-release-wiki-5ddcd67986-
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: wiki
    pod-template-hash: 5ddcd67986
  name: my-release-wiki-5ddcd67986-2rp59
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: my-release-wiki-5ddcd67986
    uid: 5b4826d1-f947-41d3-812f-143fb63524fe
  resourceVersion: "31056"
  uid: efcf88ca-f7e2-48db-84ea-4d4fa722b2fe
spec:
  containers:
  - env:
    - name: DB_TYPE
      value: postgres
    - name: DB_HOST
      value: my-release-postgresql
    - name: DB_PORT
      value: "5432"
    - name: DB_NAME
      value: wiki
    - name: DB_USER
      value: postgres
    - name: DB_SSL
      value: "false"
    - name: DB_SSL_CA
    - name: DB_PASS
      valueFrom:
        secretKeyRef:
          key: postgresql-password
          name: my-release-postgresql
    - name: HA_ACTIVE
      value: "false"
    image: requarks/wiki:latest
    imagePullPolicy: IfNotPresent
    livenessProbe:
      failureThreshold: 3
      httpGet:
        path: /healthz
        port: http
        scheme: HTTP
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
    name: wiki
    ports:
    - containerPort: 3000
      name: http
      protocol: TCP
    readinessProbe:
      failureThreshold: 3
      httpGet:
        path: /healthz
        port: http
        scheme: HTTP
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
    resources: {}
    securityContext: {}
    startupProbe:
      failureThreshold: 60
      httpGet:
        path: /healthz
        port: http
        scheme: HTTP
      initialDelaySeconds: 15
      periodSeconds: 5
      successThreshold: 1
      timeoutSeconds: 5
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-wz8vq
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: node2
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: my-release-wiki
  serviceAccountName: my-release-wiki
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-wz8vq
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-12-23T17:34:24Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-12-23T17:34:24Z"
    message: 'containers with unready status: [wiki]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-12-23T17:34:24Z"
    message: 'containers with unready status: [wiki]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-12-23T17:34:23Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://4d280f91cf7ed6f660009faaee7dbe2956fa27299c2f63501ba14ab71edfe23d
    image: docker.io/requarks/wiki:latest
    imageID: docker.io/requarks/wiki@sha256:f48eccd2dcfabc2b8d30277955d67be441f24a75d14a149c578cb7b722897d8c
    lastState:
      terminated:
        containerID: containerd://4d280f91cf7ed6f660009faaee7dbe2956fa27299c2f63501ba14ab71edfe23d
        exitCode: 1
        finishedAt: "2022-12-23T17:37:31Z"
        reason: Error
        startedAt: "2022-12-23T17:36:59Z"
    name: wiki
    ready: false
    restartCount: 3
    started: false
    state:
      waiting:
        message: back-off 40s restarting failed container=wiki pod=my-release-wiki-5ddcd67986-2rp59_default(efcf88ca-f7e2-48db-84ea-4d4fa722b2fe)
        reason: CrashLoopBackOff
  hostIP: 192.168.122.16
  phase: Running
  podIP: 10.233.75.17
  podIPs:
  - ip: 10.233.75.17
  qosClass: BestEffort
  startTime: "2022-12-23T17:34:24Z"
